Add footer description

--- a/index.html
+++ b/index.html
@@ -178,6 +178,17 @@
             </div>
           </div>
         </div>
+        <p>
+          This project was coded by
+          <a href="https://www.linkedin.com/in/zahra-tahanan-503b7317b/"
+            >Zahra Tahanan</a
+          >
+          and is
+          <a href="https://github.com/atossa76/My-Weather-App"
+            >open-sourced on GitHub</a
+          >
+          and <a href="https://www.netlify.com/">hosted by Netlify.</a>
+        </p>
       </div>
     </div>
     <script src="src/Scripts.js"></script>
