--- a/index.html
+++ b/index.html
@@ -41,21 +41,23 @@
             </form>
           </div>
           <div class="col-2">
-            <button type="button" class="btn btn-info">CURRENT</button>
+            <button type="button" class="btn btn-info current">CURRENT</button>
           </div>
         </div>
         <div class="row">
           <div class="col-6">
             <h1 id="the-city"></h1>
             <div class="row">
-              <div class="col">
+              <div class="col d-flex">
                 <img src="images/Icons Weather copy.png" alt="partly cloudy" />
-                <span class="temperature"></span>
-                <span class="units">
-                  <a class="centigrade" href="#">°C</a>
-                  |
-                  <a class="fahrenheit" href="#">°F</a>
-                </span>
+                <div>
+                  <strong class="temperature"></strong>
+                  <span class="units">
+                    <a class="centigrade" href="#">°C</a>
+                    |
+                    <a class="fahrenheit" href="#">°F</a>
+                  </span>
+                </div>
               </div>
             </div>
           </div>
@@ -197,3 +199,4 @@
     <script src="src/Scripts.js"></script>
   </body>
 </html>
+float-left
