updating to SheCodes api and some css improvement

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
             </div>
           </div>
           <div class="col mt-5">
-            <ul>
-              <li><strong id="day"></strong></li>
+            <ul class="main-descriptions">
+              <li>Last updated at: <span id="day"></apan></li>
               <li>
-                <strong id="description"></strong>
+                <span id="description"></span>
               </li>
             </ul>
           </div>
           <div class="col mt-5">
-            <ul>
+            <ul class="main-descriptions">
               <li>Humidity: <span id="humidity"> </span>%</li>
               <li>Wind: <span id="speed"> </span> km/h</li>
             </ul>
@@ -199,4 +199,4 @@
     <script src="src/Scripts.js"></script>
   </body>
 </html>
-float-left
+
