--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <div class="col d-flex">
                 <img src="images/Icons Weather copy.png" alt="partly cloudy" />
                 <div>
-                  <strong class="temperature"></strong>
+                  <strong id="temperature"></strong>
                   <span class="units">
                     <a class="centigrade" href="#">°C</a>
                     |
@@ -63,7 +63,7 @@
           </div>
           <div class="col mt-5">
             <ul class="main-descriptions">
-              <li>Last updated at: <span id="day"></apan></li>
+              <li>Last updated at: <span id="date"></apan></li>
               <li>
                 <span id="description"></span>
               </li>
