Using SheCodes Icon for Current Weather

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1 id="the-city"></h1>
             <div class="row">
               <div class="col d-flex">
-                <img src="images/Icons Weather copy.png" alt="partly cloudy" />
+                <img src="images/Icons Weather copy.png" id="icon" alt="partly cloudy" />
                 <div>
                   <strong id="temperature"></strong>
                   <span class="units">
