Icon and alt fixed
Current weather icon for current location and alt were fixed

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1 id="the-city"></h1>
             <div class="row">
               <div class="col d-flex">
-                <img src="images/Icons Weather copy.png" id="icon" alt="partly cloudy" />
+                <img src="" id="icon" alt="" />
                 <div>
                   <strong id="temperature"></strong>
                   <span class="units">
@@ -63,7 +63,10 @@
           </div>
           <div class="col mt-5">
             <ul class="main-descriptions">
-              <li>Last updated at: <span id="date"></apan></li>
+              <li>
+                Last updated at:
+                <div id="date"></div>
+              </li>
               <li>
                 <span id="description"></span>
               </li>
@@ -199,4 +202,3 @@
     <script src="src/Scripts.js"></script>
   </body>
 </html>
-
