--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     type="search"
                     class="form-control enter-city col"
                     id="city"
-                    placeholder="Enter another city"
+                    placeholder="Seaech for a city..."
                   />
                 </div>
                 <div class="col-3">
