Implemented the unit conversion

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 <div>
                   <strong id="temperature"></strong>
                   <span class="units">
-                    <a class="centigrade" href="#">°C</a>
+                    <a id="celsius-link" class="active" href="#">°C</a>
                     |
-                    <a class="fahrenheit" href="#">°F</a>
+                    <a id="fahrenheit-link" href="#">°F</a>
                   </span>
                 </div>
               </div>
