--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
               <div class="card">
                 <div class="d-flex justify-content-center">
                   <img
-                    src="images/Icons Weather copy.png"
+                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
                     class="card-img-top mt-1"
-                    alt="partly cloudy"
+                    alt="broken clouds day"
                   />
                 </div>
                 <div class="card-body">
@@ -103,9 +103,9 @@
               <div class="card">
                 <div class="d-flex justify-content-center">
                   <img
-                    src="images/sunny.png"
+                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
                     class="card-img-top mt-1"
-                    alt="sunny"
+                    alt="clear sky day"
                   />
                 </div>
                 <div class="card-body">
@@ -120,9 +120,9 @@
               <div class="card">
                 <div class="d-flex justify-content-center">
                   <img
-                    src="images/rainy.png"
+                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/mist-day.png"
                     class="card-img-top mt-1"
-                    alt="rainy"
+                    alt="mist day"
                   />
                 </div>
                 <div class="card-body">
@@ -137,9 +137,9 @@
               <div class="card">
                 <div class="d-flex justify-content-center">
                   <img
-                    src="images/rainy.png"
+                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
                     class="card-img-top mt-1"
-                    alt="rainy"
+                    alt="few clouds day"
                   />
                 </div>
                 <div class="card-body">
@@ -154,9 +154,9 @@
               <div class="card">
                 <div class="d-flex justify-content-center">
                   <img
-                    src="images/rainy.png"
+                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
                     class="card-img-top mt-1"
-                    alt="rainy"
+                    alt="rain day"
                   />
                 </div>
                 <div class="card-body">
@@ -171,9 +171,9 @@
               <div class="card">
                 <div class="d-flex justify-content-center">
                   <img
-                    src="images/sunny.png"
+                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
                     class="card-img-top mt-1"
-                    alt="sunny"
+                    alt="broken clouds day"
                   />
                 </div>
                 <div class="card-body">
