--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
           </div>
         </div>
         <div class="row border rounded p-2 m-1">
-          <div class="col">
-            <h6>Friday</h6>
+          <div class="col-2">
+            <h6 class="weather-forecast-date">Friday</h6>
             <div class="row-1">
               <div class="card">
                 <div class="d-flex justify-content-center">
@@ -92,92 +92,10 @@
                   />
                 </div>
                 <div class="card-body">
-                  <p class="card-text">18° / 10°</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <h6>Saturday</h6>
-            <div class="row-1">
-              <div class="card">
-                <div class="d-flex justify-content-center">
-                  <img
-                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
-                    class="card-img-top mt-1"
-                    alt="clear sky day"
-                  />
-                </div>
-                <div class="card-body">
-                  <p class="card-text">20° / 12°</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <h6>Sunday</h6>
-            <div class="row-1">
-              <div class="card">
-                <div class="d-flex justify-content-center">
-                  <img
-                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/mist-day.png"
-                    class="card-img-top mt-1"
-                    alt="mist day"
-                  />
-                </div>
-                <div class="card-body">
-                  <p class="card-text">20° / 13°</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <h6>Monday</h6>
-            <div class="row-1">
-              <div class="card">
-                <div class="d-flex justify-content-center">
-                  <img
-                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
-                    class="card-img-top mt-1"
-                    alt="few clouds day"
-                  />
-                </div>
-                <div class="card-body">
-                  <p class="card-text">17° / 11°</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <h6>Tuesday</h6>
-            <div class="row-1">
-              <div class="card">
-                <div class="d-flex justify-content-center">
-                  <img
-                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
-                    class="card-img-top mt-1"
-                    alt="rain day"
-                  />
-                </div>
-                <div class="card-body">
-                  <p class="card-text">18° / 11°</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <h6>Wednesday</h6>
-            <div class="row-1">
-              <div class="card">
-                <div class="d-flex justify-content-center">
-                  <img
-                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
-                    class="card-img-top mt-1"
-                    alt="broken clouds day"
-                  />
-                </div>
-                <div class="card-body">
-                  <p class="card-text">22° / 12°</p>
+                  <p class="card-text">
+                    <span class="weather-forecast-max">18°</span> /
+                    <span class="weather-forecast-min">10°</span>
+                  </p>
                 </div>
               </div>
             </div>
