--- a/index.html
+++ b/index.html
@@ -79,27 +79,8 @@
             </ul>
           </div>
         </div>
-        <div class="row border rounded p-2 m-1">
-          <div class="col-2">
-            <h6 class="weather-forecast-date">Friday</h6>
-            <div class="row-1">
-              <div class="card">
-                <div class="d-flex justify-content-center">
-                  <img
-                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
-                    class="card-img-top mt-1"
-                    alt="broken clouds day"
-                  />
-                </div>
-                <div class="card-body">
-                  <p class="card-text">
-                    <span class="weather-forecast-max">18°</span> /
-                    <span class="weather-forecast-min">10°</span>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="border rounded p-2 m-1">
+          <div class="weather-forecast" id="forecast"></div>
         </div>
       </div>
       <p class="footer">
